@@ -6,6 +6,7 @@
     &#8226; Made a drawer item for saved searches<br/>
     &#8226; Opening notifications will now take you to the correct place<br/>
     &#8226; RTL support for languages that use it<br/>
+    &#8226; Save and destroy saved searches<br/>
     &#8226; More Tweetmarker fixes<br/>
     &#8226; Some optimizations<br/>
 </br><br/>
